# voting

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  anchor-tsconfig.json  docker-compose.yml  package.json
.next/: trace
Arcium/circuits/EncryptedIxs/src/: lib.rs
Arcium/config/: Arcium.toml
Arcium/docs/: Arcium.md
Arcium/scripts/: init-arcium-localnet.js  init-comp-defs.js  init-mxe.js
DatabaseProcessor/: Cargo.toml
DatabaseProcessor/migrations/: 20250510084242_init.down.sql  20250510084242_init.up.sql
DatabaseProcessor/src/: main.rs
DatabaseProcessor/src/services/: mod.rs  redis_manager.rs  timescale_dynamic_manager.rs
DatabaseProcessor/src/types/: message_from_engine.rs  mod.rs
Frontend/: .npmrc  NPM_DEPENDENCY_FIX.md  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
Frontend/public/idl/: README.md  prediction_market.json
Frontend/src/: global.d.ts
Frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
Frontend/src/app/learn/: page.tsx
Frontend/src/app/markets/: page.tsx
Frontend/src/app/news/: page.tsx
Frontend/src/app/rewards/: page.tsx
Frontend/src/app/signin/: page.tsx
Frontend/src/components/: Dither.tsx  Icons.tsx  SolanaProvider.tsx  WalletButton.tsx
Frontend/src/home/: FeatureSections.tsx  HeroCarousel.tsx  HeroSection.tsx  HomeBanner.tsx  PriceTable.tsx
Frontend/src/layout/: Footer.tsx  Layout.tsx  Navbar.tsx
Frontend/src/lib/: utils.ts
Frontend/src/market/: MarketIcon.tsx  MarketsGrid.tsx  MarketsTable.tsx
Frontend/src/problem/: PaginationControl.tsx
Frontend/src/trade/: BottomTable.tsx  SwapUI.tsx  TradeHeader.tsx
Frontend/src/types/: window.d.ts
Frontend/src/ui/: Avatar.tsx  Button.tsx  CometCard.tsx  FloatingNavbar.tsx  Input.tsx  ScrollArea.tsx  SparklineChart.tsx  Tabs.tsx
Frontend/src/utils/: MessageStore.ts  SignalingManager.ts  arciumClient.ts  chartManager.ts  httpClient.ts  mockMarkets.ts  multiLineChartManager.ts  programClient.ts  types.ts  walletProvider.ts
Migrations/: deploy.ts
Programs/PredictionMarket/: Cargo.toml
Programs/PredictionMarket/src/: lib.rs
Programs/bounties/: Cargo.toml
Programs/bounties/src/: lib.rs
Scripts/: fund-devnet-accounts.sh  setup-program-id.sh
Tests/: Bounties.ts  PredictionMarket.ts
WebSocketServer/: Cargo.toml
WebSocketServer/src/: handlers.rs  main.rs  redis_manager.rs  websocket.rs
WebSocketServer/src/types/: mod.rs
app/app/: globals.css  layout.tsx  page.tsx
app/components/: header.tsx  providers.tsx  share-data.tsx  store-data.tsx  theme-toggle.tsx  view-data.tsx  wallet-provider.tsx
app/components/ui/: button.tsx  card.tsx  input.tsx  textarea.tsx
app/lib/: arcium.ts  config.ts
app/lib/idl/: confidential_sharing_app.json
(+11 files in other folders)
