[package]
name = "database-processor"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv.workspace = true
redis.workspace = true
rust_decimal = "1.37.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { version = "0.8.5", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "time",
] }
time = "0.3.41"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
