[package]
name = "websocket-server"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.98"
axum = { workspace = true, features = ["ws"] }
dashmap = "6.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
rand = "0.9.1"
redis = { workspace = true, features = ["connection-manager"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { version = "1.16.0", features = ["v4"] }
