[package]
name = "prediction_market"
version = "0.1.0"
description = "Created with Arcium & Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[lints.rust]
# Suppress warnings about unexpected cfg conditions from Solana/Anchor macros
unexpected_cfgs = "allow"
# Suppress deprecation warnings from anchor_lang macros (using deprecated realloc internally)
deprecated = "allow"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }

arcium-client = { default-features = false, version = "0.3.0" }
arcium-macros = "0.3.0"
arcium-anchor = "0.3.0"
